# ALICE

./: .env.example  .gitignore  ALICE_ARCHITECTURE.md  ALICE_UML.md  ALICE_VISUAL_DIAGRAM.md  DEPLOYMENT.md  Dockerfile  Dockerfile.hf-spaces  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  SUBMISSION.md  deploy_to_spaces.py  eval.py  generate_plots.py  inference.py  push_to_hf_space.sh  requirements-hf-spaces.txt  train.ipynb  train.py
alice/: README.md  __init__.py  client.py  curriculum_state.json  failure_bank.jsonl  models.py  openenv.yaml  pyproject.toml
alice/server/: Dockerfile  __init__.py  alice_environment.py  app.py  curriculum_manager.py  episode_handler.py  failure_bank.py  gradio_dashboard.py  oracle.py  requirements.txt  reward.py  task_generator.py  verifier.py
tests/: README.md  conftest.py  test_properties.py  test_unit.py
